Added routes for Dashobard

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,27 +14,27 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/signup">Sign Up</a></li>
                         <li><a href="/dashboard">Dashboard</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/signup">Sign Up</a></li>
                         <li><a href="/login">Log In</a></li>
                         <li><a href="/logout">Log Out</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
-
-        <div class="container row">
-           <h1>Hi, Welcome to your Dashboard</h1>
-           <form action="/pythonanywhere" method="post">
-            <input type="submit" class="ghost-button" value="Python Anywhere">
-          </form>
-          <form action="/heroku" method="post">
-            <input type="submit" class="ghost-button" value="Heroku">
-          </form>
-        </div>
+        <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li><a href="/pythonanywhere">Pythonanywhere</a></li>
+                            <li><a href="/heroku">Heroku</a></li>
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
     </body>
 </html>
