--- a/views/heroku.ejs
+++ b/views/heroku.ejs
@@ -7,20 +7,20 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <h1>Python Anywhere Dashboard</h1>
+    <h1>Heroku Dashboard</h1>
     <div class="container">
       <fieldset>
-        <form action="/pythonanywhere" method="post">
+        <form action="/heroku" method="post">
           <input name="username" type="text" class="ghost-input" placeholder="Enter Your Username">
           <input name="token" type="text" class="ghost-input" placeholder="Enter API Token">
           <input type="submit" class="ghost-button" value="Get Data">
         </form>
-        <% if(weather !== null){ %>
-          <p><%= weather %></p>
-        <% } %>
-        <% if(error !== null){ %>
-          <p><%= error %></p>
-        <% } %>
+        <% if(count !== null){ %>
+            <p><%= count %></p>
+          <% } %>
+          <% if(error !== null){ %>
+            <p><%= error %></p>
+          <% } %>
       </fieldset>
     </div>
   </body>
