--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -30,6 +30,16 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
+                            <li><a href="/tokens">Manage Tokens</a></li>
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
+        <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
                             <li><a href="/pythonanywhere">Pythonanywhere</a></li>
                             <li><a href="/heroku">Heroku</a></li>
                         </ul>
